added Exceptions and refactored generate-endpoint + Stream herwerkt